--- a/Predkosciomierz_rowerowy/MDK-ARM/Predkosciomierz_rowerowy.uvprojx
+++ b/Predkosciomierz_rowerowy/MDK-ARM/Predkosciomierz_rowerowy.uvprojx
@@ -473,6 +473,11 @@
               <FileType>1</FileType>
               <FilePath>../Core/Src/stm32f4xx_hal_msp.c</FilePath>
             </File>
+            <File>
+              <FileName>BikeSpeedo.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\BikeSpeedo.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
